--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
 .App {
   text-align: center;
+  background: #ffc8dd;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  width: 150px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.reward-input button {
+  width: 100px 300px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.reward-input {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button, 
+span {
+  font-size: 50px;
 }
