Created files for all 3 pages and conected first page to UI

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/*.App {
   text-align: center;
   background: #ffc8dd;
   justify-content: center;
@@ -20,4 +20,4 @@ input {
 button, 
 span {
   font-size: 50px;
-}
+}*/
