--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,51 @@
 }
 
 h1 {
-  font-size: 1.5em;
+  font-size: 3em;
+    font-family: "Tac One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    margin: 40px 0;
+  
 }
 
-.material-reward {
-  width: 85%;
+/* Hours Coding Page*/
+
+.count-number {
+  font-size: 6em;
 }
+
+.count-number-div {
+  margin: 10px 0;
+}
+
+.de-increment-button {
+  border: none;
+  border-radius: 10px;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  display: inline-block;
+  font-size: 1.5em;
+  margin: 20px 14px;
+  background: #8ecae6;
+  width: 40%;
+}
+
+.study-hours-submit-button {
+  border: none;
+  border-radius: 10px;
+  color: white;
+  padding: 10px 16px;
+  text-align: center;
+  display: inline-block;
+  font-size: 1.5em;
+  margin: 20px 2px;
+  background: #8ecae6;
+  width: 90%;
+}
+
+/*Reward Input Page*/
 
 input {
   padding: 10px 16px;
