--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,10 @@ h1 {
 
 /*Reward Input Page*/
 
+.reward-input-h1 {
+  font-size: 2.25em;
+}
+
 input {
   padding: 10px 16px;
   font-size: 1.5em;
