--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,6 @@ input {
 li {
   font-family: 'Clarendon';
   font-size: 1.5em;
-  list-style-type: "🧡";
+  list-style-type: "🦋";
   margin: 10px;
 }
